--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:$proyect-font;
-    color:#C1DADF;
-    box-sizing: border-box;   
+    font-family: $proyect-font;
+    color: $color-06;
+    box-sizing: border-box;
 }
