--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'reset';
 @import 'mapping';
 @import 'general';
-@import 'style-textos';
+@import 'space-align';
 @import 'header';
 @import 'cards';
 @import 'form';
